pricing/style.css
.anchor{
    text-decoration: none;
    color: inherit;
}










.container{
    margin: auto;
    display: flex;
    /* justify-content: center; */
    /* align-items: center; */
    /* flex-direction: column; */
    /* width: 90vw; */
    /* background-color: red; */
    padding: 20px;
    /* margin-top: 30px; */
    border-radius: 10px;
    /* background-color: orange; */
    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
    border: solid 1px #121212;
    /* min-height: 90vh; */
    margin-bottom: 30px;
    gap: 20px;
    min-height: 70vh;
    margin:20px;
    /* background-color: red; */
}

.inputContainer{
    display: flex;
    flex-direction: column;
    gap: 20px;
    /* width: 60%; */
}

.inputContainer section{
    display: flex;
    flex-direction: column;
    gap: 5px;
}
.inputContainer section input{
    /* border-style: none; */
    padding: 10px;
    /* width: 100%; */
    border-color: rgba(128, 128, 128, 0.075);
    border-width: .5px;
    border-radius: 5px;
    background-color: rgba(128, 128, 128, 0.096);
    font-size: 1rem;
}

input:focus{
    outline-color: blue;
    /* border-style: none; */
}

.header{
    text-align: center;
    font-size: 1.4rem;
    font-weight: 500;
    margin-bottom: 20px;
}

.btn button{
    padding: 10px 30px;
    border-style: none;
    background-color: orange;
    font-size: 1rem;
    border-radius: 5px;
}

.message{
    height: fit-content;
}

textarea{
    padding: 10px;
    border-width: .5px;
    border-radius: 5px;
    border-color:rgba(128, 128, 128, 0.075) ;
    background-color: rgba(128, 128, 128, 0.096);
    font-size: 1rem;
}
textarea:focus{
    outline-color: blue;
}



.contact{
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.college_header{
    font-size: 1.6rem;
    font-weight: 500;
    color: #121212;
    text-decoration: underline;
    /* width: 100%; */
    margin-bottom: 20px;
}

.address{
    /* font-weight: 500; */
    opacity: 70%;
    /* color: green; */
}

.phone_numbers{
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.phone_title , .email_address span{
    font-weight: 500;
    opacity: 80%;
}

.number span{
  font-weight: 500;
  
}


.location{
    width: 50%;
}

@media (max-width:900px) {
    .college_header{
        font-size: 1.2rem;
    }
  
    .container{
        flex-direction: column;
        /* width: 80%;
        margin: auto;
        margin-top: 30px; */
        /* margin-bottom: 60vh; */
        /* margin: 20px; */
        /* height: 90vw; */
        /* background-color: red; */
    }

    .location{
        width: 100%;
        height: 50vh;
    }

    







    .hidden_section{
        display: contents;
    }
    .navLinks_container{
        display: none;
    }

  

    .footer{
        flex-direction: column;
        gap: 20px;
    }

    .catagories_section{
        flex-direction: column;
        gap: 20px;
        width: 100%;
    }

    .college_detalis{
        /* background-color: red; */
        width: 100%;
    }

    .catagory_links{
        display: flex;
        flex-direction: row;
        gap: 20px;
        /* text-align: start; */
    }

    .catagory{
        display: flex;
        flex-direction: row;
        gap: 20px;
    }

   


    .menu{
        display: contents;
    }

    /* .hidden_section{
        display: contents;
    } */

    .sidebar{
        display: flex;
    }

   
}

